# ice-cat-wrangler

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  secrets.txt  secrets_decryptor.sh  secrets_encryptor.sh  setup.cfg
.github/workflows/: deploy_ice_cat_wrangler  deploy_ice_cat_wrangler.yml
.make/: develop.sh
api-client/: Makefile  README.md  client_launcher.py  requirements-dev.txt  requirements.txt
api-client-sig4/: .gitignore  README.md  cat_api_client.py  client.py  client_launcher.py  pyproject.toml  pyproject.yoml  requirements-dev.txt  requirements.txt
api-client-sig4/config/: dev_conf_secrets.enc  dev_conf_secrets.template
api-client-sig4/helpers/: aws_request_signer.py  boto3_bulk_s3_uploader.py  boto3_clients.py  boto3_helpers.py  cat_api_client.py  config.py  general.py
api-client/config/: dev_conf_secrets.enc  dev_conf_secrets.template
api-client/helpers/: boto3_bulk_s3_uploader.py  boto3_clients.py  cat_api_client.py  config.py  general.py  rich_printer.py
api_client/: .codiumai.toml  Makefile  client_launcher.py  requirements-dev.txt  run_pylint.sh
api_client/config/: dev_conf_secrets.enc  dev_conf_secrets.template
api_client/helpers/: boto3_bulk_s3_uploader.py  boto3_clients.py  cat_api_client.py  config.py  general.py  rich_printer.py
api_client/tests/: conftest.py  test_bulk_s3_uploader.py  test_calculate_file_hash.py  test_check_env_variables.py  test_construct_secrets_path.py  test_gen_batch_file_path.py  test_get_rek_iscat_color.py  test_load_environment_variables.py  test_read_batch_file.py  (+4 more)
docs/: design_dynamodb.md  design_prodinfra_dual_public_and_internal_locked_down_setup.md  design_s3_key_naming.md  infrastructure.drawio
ice-cat-wrangler/: serverless.yml
infra-terra/: .gitignore  Makefile  README.md  xxx_terraform_docs.sh  xxx_terraform_pluralith.sh  xxx_tfhelperv3.sh
serverless/: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  serverless.yml  setup.cfg
serverless/.make/: develop.sh  layer_delete.sh  sls_buildlayer.sh  slsdeploy.sh
serverless/config/: dev.template.yml  dev.yml.enc
serverless/functions/: data.py  fhelpers.py  func_image_analyse.py  func_results.py  func_s3_bulkimg_analyse.py  func_s3_bulkimg_analyser.py  global_context.py  globalcontext.py  handler.py  image_analyse.py  package-lock.json  package.json  results.py  s3_bulk_image_analyser.py  serverless.yml
serverless/functions/config/: dev.template.yml  dev.yml  dev.yml.enc
serverless/tests/: conftest.py  test_convert_time_string_to_epoch.py  test_convert_to_json.py  test_fhelpers.py  test_func_s3_bulkimg_analyse.py  test_gen_item_dict1_from_s3key.py  test_gen_item_dict2_from_rek_resp.py  test_get_s3_key_from_event.py  test_run.py  test_validate_s3bucket.py  test_write_debug_logs_to_dynamodb.py
shared_helpers/: 1-install.sh  2-package.sh  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.py
(+168 files in other folders)
