[project]
authors = [
  {name = "Darkpandarts", email = "14529342+darkpandarts@users.noreply.github.com"},
]
dependencies = []
description = ""
name = "ice-cat-wrangler"
readme = "README.md"
requires-python = ">=3.12"
version = "0.3.0"

[tool.poetry]
packages = [{include = "", from = "functions"}]

[tool.isort]
include_trailing_comma = true
known_first_party = ["shared"]
line_length = 88
multi_line_output = 3
profile = "black"

[tool.black]
line_length = 88

[build-system]
# build-backend = "poetry.core.masonry.api"
build-backend = "setuptools.build_meta"
requires = ["poetry-core>=2.0.0,<3.0.0", "setuptools", "wheel"]

# https://dev.to/fwojciec/how-to-structure-a-python-aws-serverless-project-4ace
